--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- // -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
